# van-damme

./: CLAUDE.md  CONTEXT.md  Cargo.toml  DEEPENING.md  MANUAL.md  Makefile  README.md  settings.json
.github/workflows/: bump-version.yml
completions/: _van-damme
docs/: prd-reuse-existing-worktree.md
src/: app.rs  autocomplete.rs  event.rs  git.rs  grouped_list.rs  install.rs  main.rs  preferences.rs  process_hook.rs  recent_dirs.rs  session.rs  session_launcher.rs  session_list.rs  splash.rs  theme.rs  tmux.rs  tui.rs
tests/: cli.rs
