[package]
name = "van-damme"
version = "0.5.2"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tui-input = "0.11"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
