[package]
name = "van-damme"
version = "0.8.1"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
tui-input = "0.11"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
fastrand = "2"

[[bin]]
name = "vd"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
